--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "qtConfigure.qtKitDir": "d:/app/Qt/6.6.0/mingw_64"
+    "qtConfigure.qtKitDir": "d:/app/Qt/6.6.0/mingw_64",
+    "files.associations": {
+        "new": "cpp"
+    }
 }
