--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,8 @@ project(game)
 include(CTest)
 enable_testing()
 
-include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/dist/json)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 aux_source_directory(./src SrcFiles)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-add_executable(game ${SrcFiles}
-        dist/jsoncpp.cpp
-        include/body.h)
+add_executable(game ${SrcFiles})
 target_link_libraries(game PRIVATE gdiplus)
